# pycon-quiz

./: .editorconfig  .gitignore
backend/: .coveragerc  .gitignore  Dockerfile  Makefile  conftest.py  demodata.json  export.py  manage.py  pyproject.toml  pytest.ini
backend/api/: schema.py
backend/api/game_manager/: subscription.py  types.py
backend/api/management/commands/: graphql_schema.py
backend/api/quizzes/: mutations.py  queries.py  types.py
backend/django_hashids/: models.py
backend/game_manager/: actions.py  channels.py  constants.py  exceptions.py  partecipants.py  participants.py  publisher.py  session.py  signals.py
backend/game_manager/tests/: test_partecipants.py  test_participants.py  test_session.py
backend/pycon_quiz/: asgi.py  redis.py  storages.py  urls.py  wsgi.py
backend/pycon_quiz/settings/: base.py  dev.py  prod.py  test.py
backend/quizzes/: admin.py  forms.py
backend/quizzes/game_manager/: actions.py
backend/quizzes/migrations/: 0001_initial.py  0002_answer_question.py  0002_auto_20200505_2053.py  0002_auto_20210612_1839.py  0003_auto_20200404_1838.py  0003_question_note.py  0003_question_ui_view.py  0004_auto_20200404_1850.py  0004_auto_20200510_1947.py  0004_auto_20210613_1608.py  0005_partecipant_color.py  0005_quizsession_current_question.py  0006_auto_20200418_2247.py  0006_quizsession_stream_link.py  0007_auto_20200418_2304.py  0007_quizsession_current_question_changed.py  0008_auto_20200521_2119.py  0009_auto_20200522_1249.py  0010_auto_20200523_2115.py  0011_answer_image_format.py  0012_auto_20200524_0209.py  0013_auto_20200524_1256.py  0014_question_points_to_give.py
backend/quizzes/models/: __init__.py  answer.py  partecipant.py  participant.py  question.py  quiz.py  quiz_session.py  user_answer.py
backend/quizzes/tests/: factories.py  fixtures.py
backend/users/: admin.py  managers.py  models.py
backend/users/management/commands/: create_admin.py
backend/users/migrations/: 0001_initial.py  0002_user_email.py
frontend/: .eslintignore  .eslintrc.js  .gitignore  codegen.yml  package.json  tsconfig.json
infrastructure/: .terraform.lock.hcl  backend.tf  backend_cloudfront.tf  backend_media_bucket.tf  cloudfront.tf  database.tf  redis.tf  (+6 more)
(+63 files in other folders)
