[tool.poetry]
name = "pycon-quiz"
version = "0.1.0"
description = ""
authors = ["Marco Acierno <marcoaciernoemail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.4"
django-environ = "^0.4.5"
strawberry-graphql = "^0.21.1"
django-model-utils = "^4.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
